--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,12 @@
    
     <div class="form-group">
       <label>Name</label>
-      <input type="text" #name="ngModel" required class="form-control" name="userName" [(ngModel)]="userModel.name">
+      <input type="text" #name="ngModel" required class="form-control" name="userName" [(ngModel)]="userModel.name" [class.is-invalid]="name.invalid && name.touched">
+      <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is required</small>
     </div>
 
 
-    {{name.className}}
+    
 
     <div class="form-group">
       <label>Email</label>
@@ -19,14 +20,19 @@
 
     <div class="form-group">
       <label>Phone</label>
-      <input type="tel" class="form-control"  name="userPhone" [(ngModel)]="userModel.phone">
+      <input type="tel" class="form-control"  #phone="ngModel" name="userPhone" [(ngModel)]="userModel.phone" pattern="^\d{10}$" minlength="10" maxlength="10" required>
+      <div *ngIf="phone.errors && (phone.invalid || phone.touched)">
+        <small  class="text-danger" *ngIf="phone.errors.required">Phone number is required</small>
+        <small  class="text-danger" *ngIf="phone.errors.pattern">Phone number must be 10 digits</small>
+      </div>
     </div>
 
     <div class="form-group">
-      <select class="custom-select"  name="userTopic" [(ngModel)]="userModel.topic">
-        <option value="">I am interested in</option>
+      <select (blur)="validateTopic(topic.value)" (change)="validateTopic(topic.value)" #topic="ngModel" [class.is-invalid]="topicHasError && topic.touched"  class="custom-select"  name="userTopic" [(ngModel)]="userModel.topic" >
+        <option value="default">I am interested in</option>
         <option *ngFor="let topic of topics">{{ topic }}</option>
       </select>
+      <small class="text-danger" [class.d-none]="!topicHasError || topic.untouched">Please choose a topic</small>
     </div>
 
     <div class="mb-3">
